content/_generated-doc/2.7/config/quarkus-smallrye-metrics.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[[quarkus-smallrye-metrics_configuration]]link:#quarkus-smallrye-metrics_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-metrics_quarkus.smallrye-metrics.path]]`link:#quarkus-smallrye-metrics_quarkus.smallrye-metrics.path[quarkus.smallrye-metrics.path]`

[.description]
--
The path to the metrics handler.
--|string 
|`metrics`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-metrics_quarkus.smallrye-metrics.extensions.enabled]]`link:#quarkus-smallrye-metrics_quarkus.smallrye-metrics.extensions.enabled[quarkus.smallrye-metrics.extensions.enabled]`

[.description]
--
Whether or not metrics published by Quarkus extensions should be enabled.
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-metrics_quarkus.smallrye-metrics.micrometer.compatibility]]`link:#quarkus-smallrye-metrics_quarkus.smallrye-metrics.micrometer.compatibility[quarkus.smallrye-metrics.micrometer.compatibility]`

[.description]
--
Apply Micrometer compatibility mode, where instead of regular 'base' and 'vendor' metrics, Quarkus exposes the same 'jvm' metrics that Micrometer does. Application metrics are unaffected by this mode. The use case is to facilitate migration from Micrometer-based metrics, because original dashboards for JVM metrics will continue working without having to rewrite them.
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-metrics_quarkus.smallrye-metrics.jaxrs.enabled]]`link:#quarkus-smallrye-metrics_quarkus.smallrye-metrics.jaxrs.enabled[quarkus.smallrye-metrics.jaxrs.enabled]`

[.description]
--
Whether or not detailed JAX-RS metrics should be enabled. 
 See link:https://github.com/eclipse/microprofile-metrics/blob/2.3.x/spec/src/main/asciidoc/required-metrics.adoc#optional-rest[MicroProfile Metrics: Optional REST metrics].
--|boolean 
|`false`

|===